fixed user info and added full form (not done)

--- a/client/main.css
+++ b/client/main.css
@@ -61,3 +61,69 @@ ul.topnav li.icon {display: none;}
 .aboutTitle {
   text-align: center;
 }
+
+
+.box, .box2, .box3, .box4, .box5, .box6 {
+  width: 200px;
+  height: 200px;
+  border: 1px yellow solid;
+  display: inline-block;
+  background-color: yellow;
+  
+}
+body {
+  background-color: lightblue;
+}
+.header {
+  display: inline-block;
+}
+
+.hidden {
+  display: none;
+}
+@media only screen and (max-width: 500px) {
+  body{
+    text-align: center; 
+  }
+  
+}
+
+
+.container {
+  display: inline-block;
+  position: relative;
+/*   width: 50%; */
+}
+
+
+.overlay {
+ position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: orange;
+  overflow: hidden;
+  width: 100%;
+  height: 0;
+  transition: .5s ease;
+  opacity: .6;
+}
+
+.container:hover .overlay {
+  height: 100%;
+}
+
+.text {
+  white-space: nowrap; 
+  color: blue;
+  font-size: 20px;
+  position: absolute;
+  overflow: hidden;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
+body{
+  text-align: center;
+}
