--- a/client/home.css
+++ b/client/home.css
@@ -1,3 +1,5 @@
+
+
 .topHome {
   background: url("https://preview.ibb.co/k0q4Dv/Screen_Shot_2017_03_25_at_4_23_41_PM.png") no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -10,58 +12,89 @@
 
 
 .bridgeGap {
-  background-color: lightblue;
-
+  background-color: #B0DFDB;
   margin: 0 10% 0 25%;
-  
   position: absolute;
   left: 0%;
   top: 40%;
   text-align: center;
-  opacity: .8;
+  opacity: .9;
+  padding-left:3%;
+  padding-right:3%;
+  padding-top:1%;
+  padding-bottom: 2%;
+  
+  
+}
+
+.bridgeGap h1 {
+	font-family: 'Oswald', sans-serif;
+    color:white;
+}
+
+.bridgeGap p {
+	font-family: 'Raleway', sans-serif;
+	color:#0C5154;
 }
 
 .learnmore {
-  background-color: lightblue;
+  background-color: #B0DFDB;
   margin: 0 10% 0 25%;
   position: absolute;
   left: 25%;
   top: 80%;
   text-align: center;
-  opacity: .8
-
-  
+  opacity: .8;
+  padding-top: 10%;
 }
 
 
 @media only screen and (max-width: 2000px) {
     .bridgeGap { left: 5%; }
-  .learnmore{left:35%;}
+	.learnmore{left:35%;}
+	.aboutHome h3{font-size:40px }
+
 }
 @media only screen and (max-width: 1500px) {
     .bridgeGap { left: 0%; }
-}
+
 .learnmore{left:30%;
   }
+  	.aboutHome h3{font-size:35px }
+}
 @media only screen and (max-width: 1200px) {
     .bridgeGap { left: -5%; }
+
+    .learnmore{left:25%;}
+	.aboutHome h3{font-size:35px }
 }
-    .learnmore{left:25%;
-  }
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 1150px) {
     .bridgeGap { left: -10%; }
-  .learnmore{left:21%;
-  }
+	.learnmore{left:21%;}
+	.aboutHome h3{font-size:30px }
+
 }
 @media only screen and (max-width: 900px) {
     .bridgeGap { left: -13%; }
-}
+
  .learnmore{left:21%;
   }
+  .aboutHome h3{font-size:25px }
+}
+ @media only screen and (max-width: 800px) {
+.aboutHome h3{font-size:23px }
+ }
+@media only screen and (max-width: 767px) {
+	.aboutHome {padding-right:3%;}
+	.blueSpace {height: 0px;}
+	.btnAbout {margin-bottom: 0px;}
+	
+}
 @media only screen and (max-width: 750px) {
     .bridgeGap { left: -15%;}
-    .learnmore{left:20%;
-  }
+    .learnmore{left:20%;}
+	.aboutHome h3{font-size:30px }
+
   
 }
 @media only screen and (max-width: 500px) {
@@ -70,14 +103,20 @@
       opacity: 1;
   }
   .topHome {
-      background:yellow; 
+      background: gray;	  
 }
   .learnmore{left:18%;
-  opacity: 1;
+opacity: 1;
 }
+	.aboutHome h3{font-size:30px }
+
 }
 
-
+.blueSpace {
+	width: 100%;
+	height: 80px;
+	background: #B0DFDB;
+}
 
 .secondHome {
   background: lightblue fixed;
@@ -85,54 +124,118 @@
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  padding-bottom: 500px;
   display: block;
-  bottom: -500px;
   
 }
 .aboutHome{
   font-size: large;
-  background: yellow;
-  
+  background: #F7EC18;
+  padding-left: 3%;
+
   
 }
+
+.btnAbout {
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 10px;
+  background: #3E8076;
+  padding: 8px 16px 8px 16px;
+  text-decoration: none;
+  display:inline-block;
+  margin-bottom: 15%;
+}
+
+.btnAbout:hover {
+  background: #F7EC18;
+  text-decoration: none;
+}
+
+
+
+
 .boxes{
   width: 200px;
   height: 200px;
   border: 1px yellow solid;
   display: inline-block;
-  background-color: yellow;
+  background-color: #F7EC18;
+  font-family: 'Oswald', sans-serif;
+}
+
+#BridgedDescription {
+	font-family: 'Oswald', sans-serif;
 }
 
 .getStarted{
-  background: light blue;
-  padding-top: 100px;
+  background: #B0DFDB;
 }
+
+.start1 {
+	text-align: right;
+	padding-top: 140px;
+  padding-bottom: 140px;
+}
+
+.start2 {
+	text-align: left;
+	padding-top: 140px;
+  padding-bottom: 140px;
+}
+
 .btn {
-	background-color:#163569;
-	-moz-border-radius:9px;
-	-webkit-border-radius:9px;
-	border-radius:9px;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Courier New;
-	font-size:17px;
-	padding:14px 19px;
-	text-decoration:none;
+  -webkit-border-radius: 23;
+  -moz-border-radius: 23;
+  border-radius: 23px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 35px;
+  background: #3E8076;
+  padding: 10px 25px 10px 25px;
+  text-decoration: none;
 }
+
 .btn:hover {
-	background-color:#e9f013;
-}
-.btn:active {
-	position:relative;
-	top:1px;
+  background: #B0DFDB;
+  text-decoration: none;
 }
 #homeboxes {
 	width: 90%;
 	padding-top: 0px;
-	padding-bottom: 10px;
+	padding-bottom: 15px;
 }
 #BridgedDescription {
 	padding-top: 40px;
+}
+.verticalLine {
+	height: 400px;
+	margin: 100px auto 70px auto;
+	background-color: #F7EC18;
+	width: 2px;
+	
+}
+
+.seniorsTeen h1{
+	font-size:70px;
+	padding-top: 40px;
+}
+
+@media only screen and (max-width: 767px) {
+	.verticalLine{
+		width: 500px;
+		margin: auto;
+		background-color:#F7EC18;
+		height: 2px;
+		
+	}
+	.start1 {
+		text-align: center;
+		padding-top: 100px;
+		padding-bottom: 75px;
+	}
+	.start2 {
+		text-align: center;
+		padding-top: 0;
+		padding-bottom: 100px;
+	}
 }
