--- a/client/main.css
+++ b/client/main.css
@@ -91,8 +91,12 @@ body {
   
 }
 
+#display {
+	color: #3E8076;
+	font-family: Raleway;
+}
 
-.container {
+.boxContainer {
   display: inline-block;
   position: relative;
 /*   width: 50%; */
@@ -112,7 +116,7 @@ body {
   opacity: .6;
 }
 
-.container:hover .overlay {
+.boxContainer:hover .overlay {
   height: 100%;
 }
 
@@ -129,4 +133,66 @@ body {
 }
 body{
   text-align: center;
+}
+
+form {
+	padding: 12% 5% 10% 5%;
+	text-align: left;
+}
+
+input {
+	border-radius: 10px;
+	font-size: 30px;
+	width: 100%;
+}
+.fields {
+	font-size: 50px;
+	color: white;
+	font-family: Oswald;
+}
+
+#answer {
+	width: 100%;
+	height: 200px;
+}
+
+#age, #school, #place, #entrance {
+	width: 100%;
+}
+
+#registerButton {
+	margin: auto;
+	text-align: center;
+	background-color: #3E8076;
+	color: white;
+}
+
+.center {
+	margin: auto;
+	text-align: center;
+}
+
+.signIn {
+	font-family: Comfortaa;
+	font-size: 60px;
+	font-weight: bold;
+	color: #3E8076;
+}
+
+.learning {
+	font-family: Comfortaa;
+	font-size: 40px;
+	font-weight: bold;
+	color: #3E8076;
+}
+
+.learnPara {
+	font-family: Comfortaa;
+	font-size: 18px;
+	font-weight: bold;
+	color: #3E8076;
+}
+
+.aboutPage {
+	padding: 12% 5% 10% 5%;
 }
