--- a/client/home.css
+++ b/client/home.css
@@ -1,7 +1,7 @@
 
 
 .topHome {
-  background: url("https://preview.ibb.co/k0q4Dv/Screen_Shot_2017_03_25_at_4_23_41_PM.png") no-repeat center center fixed;
+  background: url("home.png") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
