--- a/client/main.css
+++ b/client/main.css
@@ -35,7 +35,7 @@ ul.topnav li a:hover {background-color: #93CACC;}
 ul.topnav li.icon {display: none;}
 
 /* When the screen is less than 680 pixels wide, hide all list items, except for the first one ("Home"). Show the list item that contains the link to open and close the topnav (li.icon) */
-@media screen and (max-width:680px) {
+@media only screen and (max-width:680px) {
   ul.topnav li:not(:first-child) {display: none;}
   ul.topnav li.icon {
     float: right;
@@ -44,7 +44,7 @@ ul.topnav li.icon {display: none;}
 }
 
 /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens */
-@media screen and (max-width:680px) {
+@media only screen and (max-width:680px) {
   ul.topnav.responsive {position: relative;}
   ul.topnav.responsive li.icon {
     position: absolute;
@@ -84,7 +84,7 @@ body {
 .hidden {
   display: none;
 }
-@media only screen and (max-width: 500px) {
+@media only only screen and (max-width: 500px) {
   body{
     text-align: center; 
   }
@@ -204,5 +204,5 @@ input {
 .infoLine {
 	height: 2px;
 	width: 100%;
-background-color: #F7EC18;
+	background-color: #F7EC18;
 }
